--- a/bower.json
+++ b/bower.json
@@ -29,6 +29,7 @@
     "angular-bootstrap": "^1.2.5",
     "angular-strap": "^2.3.7",
     "bootstrap": "^3.3.6",
-    "angular-oauth2": "^4.0.0"
+    "angular-oauth2": "^4.0.0",
+    "ng-file-upload": "^12.0.4"
   }
 }
